# wvu-gscm-425.github.io

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
_freeze/learning-modules/02-intro-to-python/execute-results/: html.json
_freeze/learning-modules/03-functions-flow-control-and-conditionals/execute-results/: html.json
course-information/: _syllabus_print.qmd  grading-and-deliverables.qmd  resources.qmd  schedule.qmd
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/course-information/: grading-and-deliverables.html  policies.html  resources.html  schedule.html
docs/learning-modules/: 01-setting-up-your-workstation.html  02-intro-to-python.html  03-functions-flow-control-and-conditionals.html  04-data-structures.html  05-intro-to-gurobipy.html  06-minimum-cost-network-flow-modeling.html  07-facility-location.html  08-networks-under-uncertainty.html
docs/learning-modules/data/: min_cost_ex_nodes.csv
docs/learning-modules/resources/: apex_television-solved.xlsx
docs/site_libs/bootstrap/: bootstrap-656ac620b4633344b73e40acfecb79e6.min.css
images/: logo-gscm-425.pptx
learning-modules/: 01-setting-up-your-workstation.qmd  02-intro-to-python.qmd  05-intro-to-gurobipy.qmd  06-minimum-cost-network-flow-modeling.qmd  08-networks-under-uncertainty.qmd  _07-facility-location.md  _metadata.yml  exercise1_solution.csv  lab-05.txt  optimal_flows.csv  solution_summary.csv
learning-modules/data/: min_cost_ex_arcs.csv  min_cost_ex_solution.csv  multi_city_data.csv  multi_city_data_2.csv
learning-modules/resources/: wyndor-solved.xlsx
(+4 files in other folders)
